# qqwry

./: .gitignore  BuildPage.cmake  CMakeLists.txt  QQWryDemo.cpp  QQWryDemo.vcxproj  QqwryParse.cpp  QqwryParse.h  README.md  qqwry.h  update_qqwry.py
.github/workflows/: cmake-multi-platform.yml  update_qqwry.yml
